Version 0.5.0: client functioning almost completely but needs polishing